<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="com_auth0_domain">natai.eu.auth0.com</string>
    <string name="com_auth0_scheme">natai</string>
    <string name="preference_file_key">com.svbackend.natai.PREFS</string>
    <string name="john_doe">John Doe</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="addNote">Add Note</string>
    <string name="saving">Saving..</string>
    <string name="noteContent">How was your day?</string>
    <string name="noteTitle">Title</string>
    <string name="newNote">New Note</string>
    <string name="title_activity_basic">Notes</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="home">Home</string>
    <string name="notes">Notes</string>
    <string name="editNote">Edit Note</string>
    <string name="noNotesTitle">No notes yet</string>
    <string name="noNotesText">You can add your first note and it will appear here</string>
    <string name="appName">Natai Diary</string>
</resources>