<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewNoteActivity">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollFeed"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/centre_background"
        android:focusableInTouchMode="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.appsnipp.formdesigns.MainActivity"
        tools:showIn="@layout/activity_main">

        <androidx.cardview.widget.CardView
            android:id="@+id/personalDetailsCard"
            style="@style/centreLocatorCardDesign"
            android:layout_marginTop="10dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:focusableInTouchMode="false"
                android:orientation="vertical"
                android:padding="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textSize="18sp"
                        android:id="@+id/txtNoteTitle"
                        style="@style/modifiedEditText"
                        android:hint="@string/noteTitle"
                        android:maxLines="2" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtInputContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <EditText
                        android:textSize="16sp"
                        android:id="@+id/txtNoteContent"
                        style="@style/modifiedEditText"
                        android:hint="@string/noteContent"
                        android:maxLines="10"
                        android:minLines="6" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/addNoteBtn"
                    android:layout_width="100dp"
                    android:textSize="16sp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:background="@drawable/centre_button"
                    android:text="@string/addNote"
                    android:layout_marginTop="12sp"
                    android:textColor="@color/whiteTextColor" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>